# DoveDispatch

./: CMakeLists.txt  DoveDispatchConfig.cmake  Doxyfile  Jenkinsfile  README.md  sonar-project.properties
include/: DoveDispatch.hpp  Event.hpp  EventEmitter.hpp
source/: Event.cpp  EventEmitter.cpp
tests/: CMakeLists.txt  test_Event.cpp  test_EventEmitter.cpp  test_main.cpp
